# CLAIRE-DirectLLM-Docker

./: .dockerignore  .gitignore  CLAIRE-DirectLLM-Docker-Implementation.md  Dockerfile  README.md  VERSION  ask  compare  docker-compose.yml  docker-plan.md  notes.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
config/: models.yaml  settings.yaml
src/claire_directllm/: __init__.py  ask.py  compare_models.py
src/claire_directllm/llm/: __init__.py  client.py  prompts.py
